--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+anyio==3.6.1
+asgiref==3.5.2
+black==22.3.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+click==8.1.2
+fastapi==0.78.0
+h11==0.13.0
 idna==3.3
 pydantic==1.9.0
 python-dateutil==2.8.2
@@ -7,5 +13,9 @@ pytz==2022.1
 PyYAML==6.0
 requests==2.27.1
 six==1.16.0
+sniffio==1.2.0
+starlette==0.19.1
+tomli==2.0.1
 typing_extensions==4.2.0
 urllib3==1.26.9
+uvicorn==0.17.6
